        those active and inactive for the current site. [b4]
      - CSS property name completion is now available. [b4]
      - :delstyle, :styleenable, :styledisable and :styletoggle accept a !
        to operate on all styles. [b6]
    * IMPORTANT option changes:
      - 'hinttags' and 'extendedhinttags' now treat their values as
        CSS selectors by default. [b6]
      - Option value quoting has changed. List options will
        no longer be split at quoted commas and the option name, operators, and
        = sign may no longer be quoted. This will break certain
        automatically-generated configuration files. See :help stringlist. [b2]
      - Boolean options no longer accept an argument. [b4]
      - 'cdpath' and 'runtimepath' no longer treat ",,"
        specially. Use "." instead. [b2]
      - 'incsearch', 'hlsearch', 'ignorecase', and 'smartcase' have
        been replaced with 'incfind', 'hlfind', and 'findcase'. [b4]
      - 'extendedhinttags' is now a regexpmap rather than a
        string. [b2]
      - 'guioptions' default value has changed. [b4]
      - 'laststatus' has been replaced with the "s" flag in
        'guioptions'. [b4]
      - 'linksearch' has been removed.  The \l search modifier can
        still be used for this purpose. [b4]
      - 'loadplugins' is now a regexplist option rather than
        a boolean. [b2]
      - 'mapleader' is now an option rather than a :let
        variable. [b4]
      - 'showstatuslinks' and 'showtabline' are now string options. [b4]
      - 'passkeys' is now a sitemap rather than a regexpmap. [b6]
    * IMPORTANT: Command script files now use the *.penta file extension. [b2]
    * IMPORTANT: Plugins are now loaded from the 'plugins/'
      directory in 'runtimepath' rather than 'plugin/'. [b1]
    * Option changes:
      - Added stringmap, regexplist and regexpmap option types. [b1]
      - Added sitelist and sitemap option types. [b6]
      - Added "bookmarks", "diverted", and "links" to 'activate'